fixed text wrapping

--- a/public/css/GardenStyle.css
+++ b/public/css/GardenStyle.css
@@ -180,6 +180,7 @@ body {
   margin: 16px auto;
   text-align: center;
   min-width: 500px;
+  word-wrap: break-word;
 }
 
 .custom-format-header,
